--- a/20.Su-ly-bao-loi-co-ban/index.html
+++ b/20.Su-ly-bao-loi-co-ban/index.html
@@ -38,6 +38,38 @@
                 <input id="password_confirmation" name="password_confirmation" placeholder="Nhập lại mật khẩu" type="password" class="form-control">
                 <span class="form-message"></span>
             </div>
+
+            <div class="form-group">
+                <label for="avatar" class="form-label">Ảnh đại diện</label>
+                <input id="avatar" name="avatar" type="file" class="form-control">
+                <span class="form-message"></span>
+            </div>
+
+            <div class="form-group">
+                <label for="province" class="form-label">Tỉnh TP</label>
+                <select id="province" name="province" class="form-control">
+                    <option value="">-- Chọn Tỉnh TP --</option>
+                    <option value="hanoi">Hà Nội</option>
+                    <option value="haiphong">Hải Phòng</option>
+                </select>
+                <span class="form-message"></span>
+            </div>
+
+            <div class="form-group">
+                <label for="password_confirmation" class="form-label">Giới tính</label>
+                <div>
+                    <input name="gender" type="checkbox" value="male" class="form-control">
+                    Nam
+                </div>
+                <div>
+                    <input name="gender" type="checkbox" value="female" class="form-control">
+                    Nữ
+                </div><div>
+                    <input name="gender" type="checkbox" value="other" class="form-control">
+                    Khác
+                </div>
+                <span class="form-message"></span>
+            </div>
       
             <button class="form-submit">Đăng ký</button>
         </form>
@@ -49,12 +81,16 @@
         Validator({
             form: '#form-1',
             errorSelector: '.form-message',
+            formGroupSelector: '.form-group',
             rules: [
                 Validator.isRequired('#fullname', 'Vui lòng nhập tên đầy đủ của bạn'),
                 Validator.isRequired('#email'),
                 Validator.isEmail('#email'),
+                Validator.isRequired('#avatar'),
                 Validator.minLength('#password', 6),
                 Validator.isRequired('#password_confirmation'),
+                Validator.isRequired('input[name=gender]'),
+                Validator.isRequired('#province'),
                 Validator.isConfirmed('#password_confirmation', function() {
                     return document.querySelector('#password').value
                 }, 'Mật khẩu nhập lại không chính xác')
