--- a/20.Su-ly-bao-loi-co-ban/index.html
+++ b/20.Su-ly-bao-loi-co-ban/index.html
@@ -54,22 +54,39 @@
                 </select>
                 <span class="form-message"></span>
             </div>
-
             <div class="form-group">
                 <label for="password_confirmation" class="form-label">Giới tính</label>
                 <div>
-                    <input name="gender" type="checkbox" value="male" class="form-control">
+                    <input name="gender" type="radio" value="male" class="form-control abcxy">
                     Nam
                 </div>
                 <div>
-                    <input name="gender" type="checkbox" value="female" class="form-control">
+                    <input name="gender" type="radio" value="female" class="form-control">
                     Nữ
-                </div><div>
-                    <input name="gender" type="checkbox" value="other" class="form-control">
+                </div>
+                <div>
+                    <input name="gender" type="radio" value="male" class="form-control">
                     Khác
                 </div>
                 <span class="form-message"></span>
             </div>
+            <div class="form-group">
+                <label for="password_confirmation" class="form-label">Lịch học</label>
+                <div>
+                    <input name="timeStudy" type="checkbox" value="sang" class="form-control abcxyz">
+                    Sáng
+                </div>
+                <div>
+                    <input name="timeStudy" type="checkbox" value="trua" class="form-control">
+                    Trưa
+                </div>
+                <div>
+                    <input name="timeStudy" type="checkbox" value="chieu" class="form-control">
+                    Chiều
+                </div>
+                <span class="form-message"></span>
+            </div>
+            
       
             <button class="form-submit">Đăng ký</button>
         </form>
@@ -88,9 +105,10 @@
                 Validator.isEmail('#email'),
                 Validator.isRequired('#avatar'),
                 Validator.minLength('#password', 6),
-                Validator.isRequired('#password_confirmation'),
                 Validator.isRequired('input[name=gender]'),
+                Validator.isRequired('input[name=timeStudy]'),
                 Validator.isRequired('#province'),
+                Validator.isRequired('#password_confirmation'),
                 Validator.isConfirmed('#password_confirmation', function() {
                     return document.querySelector('#password').value
                 }, 'Mật khẩu nhập lại không chính xác')
@@ -100,6 +118,8 @@
                 console.log(data)
             }
         })
+        // console.log([document.getElementsByClassName('abcxyz')[0].value])
+        // console.log([document.getElementsByClassName('abcxy')[0]])
     </script>
 </body>
 </html>
