--- a/21Form-validation-II/index.html
+++ b/21Form-validation-II/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div class="main">
-
         <form action="" method="POST" class="form" id="register-form">
             <h3 class="heading">Thành viên đăng ký</h3>
             <p class="desc">Cùng nhau học lập trình miễn phí tại F8 ❤️</p>
@@ -39,7 +38,11 @@
     </div>
     <script src="./app.js"></script>
     <script>
-        Validator('#register-form')
+        Validator('#register-form', {
+            onSubmit: function (data) {
+                console.log(data)
+            }
+        })
     </script>
 </body>
 </html>
